[gd_scene load_steps=5 format=3 uid="uid://di886evynwj2f"]

[ext_resource type="Script" path="res://JoinGame.gd" id="1_51xgp"]
[ext_resource type="LabelSettings" uid="uid://cyxyrkeewsy8b" path="res://TitleStyle.tres" id="2_50y0q"]
[ext_resource type="PackedScene" uid="uid://c5u3r1d3i7232" path="res://ServerEntry.tscn" id="3_6xtfh"]
[ext_resource type="Script" path="res://addons/LANServerMulticast/ServerListener.gd" id="3_ddb4k"]

[node name="JoinGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51xgp")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_right = 66.0
offset_bottom = 75.0
grow_horizontal = 2
text = "Join"
label_settings = ExtResource("2_50y0q")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SpacerLeft" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="ServerList" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ServerEntry" parent="HBoxContainer/ServerList" instance=ExtResource("3_6xtfh")]
layout_mode = 2

[node name="SpacerRight" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"

[node name="ServerListener" type="Node" parent="."]
script = ExtResource("3_ddb4k")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
